force-app/main/default/objects/Child_Case_Creation_Planning_SE__mdt/Child_Case_Creation_Planning_SE__mdt.object-meta.xml
<CustomObject>
    <label>Child Case Creation Planning SE</label>
    <pluralLabel>Child Case Creation Planning SEs</pluralLabel>
</CustomObject>