force-app/main/default/objects/Child_Case_Creation_Planning_SE__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning: Schedule Adjustments</fullName>
                <default>true</default>
                <label>Planning: Schedule Adjustments</label>
            </value>
            <value>
                <fullName>Planning: Planning Inventory Constraints</fullName>
            </value>
            <value>
                <fullName>Planning: CTP Lite Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>