force-app/main/default/objects/Child_Case_Creation_Planning_SE__mdt/fields/Contact1__c.field-meta.xml
<CustomField>
    <fullName>Contact1__c</fullName>
    <label>Contact1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>