force-app/main/default/objects/Child_Case_Creation_Planning_SE__mdt/fields/Contact2__c.field-meta.xml
<CustomField>
    <fullName>Contact2__c</fullName>
    <label>Contact2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>