force-app/main/default/objects/Child_Case_Creation_Planning_SE__mdt/fields/Contact3__c.field-meta.xml
<CustomField>
    <fullName>Contact3__c</fullName>
    <label>Contact3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>