force-app/main/default/objects/Child_Case_Creation_Planning_SE__mdt/fields/Location_Plant_Information__c.field-meta.xml
<CustomField>
    <fullName>Location_Plant_Information__c</fullName>
    <label>Location_Plant_Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>