force-app/main/default/objects/Child_Case_Creation_Planning_SE__mdt/listViews/Planning_Case_type.listView-meta.xml
<ListView>
    <fullName>Planning_Case_type</fullName>
    <columns>MasterLabel</columns>
    <columns>Case_Type__c</columns>
    <columns>Location_Plant_Information__c</columns>
    <columns>Product__c</columns>
    <columns>Contact1__c</columns>
    <columns>Contact2__c</columns>
    <columns>Contact3__c</columns>
    <columns>Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Planning Case type</label>
    <language>en_US</language>
</ListView>